// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Overlay > should close when clicked outside 1`] = `
<div>
  <rk-overlay
    aria-hidden="true"
    class="absolute left-0 top-0 h-screen w-screen z-1"
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </rk-overlay>
  
</div>
`;

exports[`Overlay > should close when clicked outside 2`] = `
<div>
  <rk-overlay
    aria-hidden="true"
    class="absolute left-0 top-0 h-screen w-screen display-none"
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </rk-overlay>
  
</div>
`;

exports[`Overlay > should close when escape key is pressed 1`] = `
<div>
  <rk-overlay
    aria-hidden="true"
    class="absolute left-0 top-0 h-screen w-screen z-1"
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </rk-overlay>
  
</div>
`;

exports[`Overlay > should close when escape key is pressed 2`] = `
<div>
  <rk-overlay
    aria-hidden="true"
    class="absolute left-0 top-0 h-screen w-screen display-none"
    role="presentation"
  >
    <p>
      This is a static content component.
    </p>
    <!---->
  </rk-overlay>
  
</div>
`;

exports[`Overlay > should render empty 1`] = `
<div>
  <rk-overlay
    aria-hidden="true"
    class="absolute left-0 top-0 h-screen w-screen z-1"
    role="presentation"
  >
    <!---->
  </rk-overlay>
  
</div>
`;
